<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">OneUI Sample App</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="link_telegram_oneui" translatable="false">https://t.me/oneuiproject</string>
    <string name="link_github_yann" translatable="false">https://github.com/Yanndroid</string>
    <string name="link_github_salvo" translatable="false">https://github.com/salvogiangri</string>
    <string name="link_github_tribalfs" translatable="false">https://github.com/tribalfs</string>
    <string name="link_jetpack" translatable="false">https://developer.android.com/jetpack</string>
    <string name="link_material" translatable="false">https://material.io/develop/android</string>
    <string name="link_sesl_androidx" translatable="false">https://github.com/tribalfs/sesl-androidx</string>
    <string name="link_sesl_material" translatable="false">https://github.com/tribalfs/sesl-material-components-android</string>
    <string name="link_oneui_design" translatable="false">https://github.com/tribalfs/oneui-design</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="settings">Settings</string>
    <string name="no_browser_app_installed">No browser app installed…</string>
    <string name="error_cant_open_url">Error: URL could not be opened.</string>
    <string name="error_loading_apps">Error loading apps</string>
    <string name="version">Version %1$s</string>
    <string name="about_app">About OneUI Sample</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="about_custom" translatable="false">Custom About OneUI Sample</string>
    <string name="status" translatable="false">Status</string>
    <string name="oneui_project_team" translatable="false">OneUI Project Team</string>
    <string name="android_jetpack" translatable="false">Android Jetpack</string>
    <string name="material_components" translatable="false">Material Components</string>
    <string name="sesl_android_jetpack_unofficial" translatable="false">SESL Android Jetpack (Unofficial)</string>
    <string name="sesl_material_components_for_android_unofficial" translatable="false">SESL Material Components for Android (Unofficial)</string>
    <string name="oneui_design_lib" translatable="false">OneUI Design Lib</string>
    <string name="yanndroid" translatable="false">Yanndroid</string>
    <string name="salvo_giangreco" translatable="false">Salvo Giangreco</string>
    <string name="tribalfs" translatable="false">Tribalfs</string>
    <string name="design">Design</string>
    <string name="system_default">System default</string>
    <string name="language">Language</string>
    <string name="change_language">Change app language</string>
    <string name="change_language_not_supported_by_device">Change language is not supported by your device.</string>
    <string name="delete_appdata_and_exit">Delete App-Data and exit</string>
    <string name="delete_appdata_and_exit_warning">Attention: This will delete all personal data. Continue? </string>
    <string name="dev_options">Developer options</string>
    <string name="more_information">More Information</string>
    <string name="oobe">OOBE</string>
    <string name="oobe_onboard_msg1_title">Beautiful design</string>
    <string name="oobe_onboard_msg2_title">Free</string>
    <string name="oobe_onboard_msg3_title">No ads</string>
    <string name="oobe_onboard_msg1_summary">A nice app with OneUI design.</string>
    <string name="oobe_onboard_msg2_summary">No subscriptions, no in-app purchases, no costs at all.</string>
    <string name="oobe_onboard_msg3_summary">No annoying ads.</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_content">It is not permitted to use this app contrary to morality or the laws in force. \n\nYou also agree that you will not use this app for any purposes prohibited by United States law, including, without limitation, the development, design, manufacture, or production of missile, chemical or biological weapons. \nHowever, this restriction will not apply in the event of the occurrence (certified by the United States Centers for Disease Control or successor body) of a widespread viral infection transmitted via bites or contact with bodily fluids that causes human corpses to reanimate and seek to consume living human flesh, blood, brain or nerve tissue and is likely to result in the fall of organized civilization. </string>
    <string name="oobe_tos_text">By continuing, you agree to the %1$s.</string>
    <string name="search">Search</string>
    <string name="search_filter">Search Filter</string>
    <string name="no_results_found">No results found</string>
    <string name="icons" translatable="false">Icons</string>
    <string name="picker" translatable="false">Picker</string>
    <string name="seek_bar" translatable="false">SeekBar</string>
    <string name="bottom_sheet" translatable="false">Bottom Sheet</string>
    <string name="app_picker" translatable="false">AppPicker</string>
    <string name="widgets" translatable="false">Widgets</string>
    <string name="progress_bar" translatable="false">ProgressBar</string>
    <string name="qr" translatable="false">QR</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_end_time">Start End Time</string>
    <string name="color">Color</string>
    <string name="show_cancel_button">Show cancel button</string>
    <string name="index_scroll" translatable="false">IndexScroll</string>
    <string name="show_index_scroll">Show IndexScroll</string>
    <string name="show_letters">Show letters</string>
    <string name="auto_hide">Auto hide</string>
    <string name="action_mode_search_options">ActionModeSearch options</string>
    <string name="search_apps">Search apps</string>
    <string name="select_layout_mode">Select layout mode</string>
    <string name="simple_picker_mode">Simple mode</string>
    <string name="qs_detail_view_text">This is the QS Detail View.</string>
    <string name="qs_tile_subtitle">Subtitle</string>
    <string name="face_widget_text">OneUI Sample App Face Widget</string>
    <string name="face_widget_text_aod">OneUI Sample App AOD Face Widget</string>
    <string name="memory_leaks" translatable="false">Memory leaks</string>
    <string name="switch_bar_example">This is a SwitchBar example.</string>
    <string name="list">List</string>
    <string name="list_action_button">List, Action Button</string>
    <string name="list_checkbox">List, CheckBox</string>
    <string name="list_checkbox_all_apps">List, CheckBox, All apps</string>
    <string name="list_radiobutton">List, RadioButton</string>
    <string name="list_switch">List, Switch</string>
    <string name="list_switch_all_apps">List, Switch, All apps</string>
    <string name="grid">Grid</string>
    <string name="grid_checkbox">Grid, CheckBox</string>
    <string name="button" translatable="false">Button</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="turned_on">Turned on</string>
    <string name="failed">Failed!</string>
    <string name="extra_1">Extra 1</string>
    <string name="extra_2">Extra 2</string>
    <string name="left_to_right">Left to Right</string>
    <string name="right_to_left">Right to Left</string>
    <string name="left_label">Left</string>
    <string name="right_label">Right</string>
    <string name="main_button_clicked">Main button clicked! updateState: %1$s</string>
    <string name="suggestion_title">This is a suggestion view</string>
    <string name="action_button" translatable="false">Action Button</string>
    <string name="action_button_clicked">Action button clicked!</string>
    <string name="card_item_view_clicked">Card Item View Clicked</string>
    <string name="bottom_tip_view_clicked">Bottom Tip View Clicked</string>
    <string name="bottom_tip_view_link_clicked">Bottom Tip View Link Clicked</string>
    <string name="relative_link_1_clicked">Relative Link 1 Clicked</string>
    <string name="relative_link_2_clicked">Relative Link 2 Clicked</string>
    <string name="search_up_button_clicked">Search Up Button Clicked</string>
    <string name="menu_item_1_selected">Menu item 1 selected</string>
    <string name="menu_item_2_selected">Menu item 2 selected</string>
    <string name="menu_item_3_selected">Menu item 3 selected</string>
    <string name="start_end_time_result">Start time: %1$s\nEnd time: %2$s</string>
    <string name="on_click" translatable="false">onClick</string>
    <string name="new_value">New value: %1$s</string>
    <string name="tile_clicked_inactive">Tile clicked: inactive</string>
    <string name="tile_clicked_active">Tile clicked: active</string>
    <string name="toggle_button_state">Toggle Button: %1$s</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="scan_result_title">Scan result</string>
    <string name="no_camera_available">Camera not available</string>
    <string name="share">Share</string>
    <string name="error_share_content_not_supported_on_device">Error: Sharing content is not supported on your device.</string>
    <string name="tip_long_press_multiselect">Long-press an item to select multiple</string>
    <string name="tip_icons_tab">Browse the OneUI icon library used throughout this app.</string>
    <string name="progress_dialog" translatable="false">ProgressDialog</string>
    <string name="loading">Loading…</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="progress_indeterminate" translatable="false">Indeterminate</string>
    <string name="progress_determinate" translatable="false">Determinate</string>
    <string name="compound_buttons" translatable="false">Compound Buttons</string>
    <string name="spinner_label" translatable="false">Spinner</string>
    <string name="search_view_label" translatable="false">SearchView</string>
    <string name="switch_label" translatable="false">Switch</string>
    <string name="checkbox_label" translatable="false">CheckBox</string>
    <string name="radio_button" translatable="false">RadioButton</string>
    <string name="custom_item_views" translatable="false">Custom item views</string>
    <string name="buttons_section" translatable="false">Buttons</string>
    <string name="relative_link_1" translatable="false">Relative link 1</string>
    <string name="relative_link_2" translatable="false">Relative link 2</string>
    <string name="more_details">More details</string>
    <string name="bottom_tip_description">This is a sample bottom tip description.</string>
    <string name="tip_title">Tip</string>
    <string name="popup_menu">Pop-up Menu</string>
    <string name="popup_menu_item_1">Pop-up menu item 1</string>
    <string name="popup_menu_item_2">Pop-up menu item 2</string>
    <string name="popup_menu_item_3">Pop-up menu item 3</string>
    <string name="popup_menu_item_4">Pop-up menu item 4</string>
    <string name="select_item_1">Item 1</string>
    <string name="select_item_2">Item 2</string>
    <string name="select_item_3">Item 3</string>
    <string name="tips_card_summary">From here the preference dummies start.</string>
    <string name="suggestion_card_summary">Just a suggestion: you can turn me on anytime.</string>
    <string name="suggestion_pref_title">Suggestion</string>
    <string name="turn_on">Turn on</string>
    <string name="updatable_widget">Updatable widget</string>
    <string name="click_me">Click me</string>
    <string name="checkbox_pref_summary">Someone\'s still using this one?</string>
    <string name="summary_placeholder">Summary</string>
    <string name="seekbar_expanded">Expanded</string>
</resources>