<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/design">
        <dev.oneuiproject.oneui.preference.HorizontalRadioPreference
            android:key="dark_mode_pref"
            app:entries="@array/preferences_darkmode_entries"
            app:entriesImage="@array/preferences_darkmode_entries_image"
            app:entryValues="@array/preferences_darkmode_values"
            app:viewType="image" />
        <SwitchPreferenceCompat
            android:key="dark_mode_auto_pref"
            android:title="@string/system_default" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <SwitchPreferenceCompat
            android:key="confirm_exit_pref"
            android:summary="@string/press_again_to_exit"
            android:title="@string/confirm_exit" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="dev_options"
        android:title="@string/dev_options">
        <PreferenceScreen
            android:key="delete_app_data_pref"
            android:title="@string/delete_appdata_and_exit" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/more_information">
        <PreferenceScreen
            android:key="tos_pref"
            android:title="@string/tos" />

        <PreferenceScreen
            android:key="about_app_pref"
            android:title="@string/about_app">
            <intent
                android:targetClass="de.lemke.oneuisampleapp.ui.AboutActivity"
                android:targetPackage="de.lemke.oneuisampleapp" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>