<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2022-2026 Leonard Lemke

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/design">
        <dev.oneuiproject.oneui.preference.HorizontalRadioPreference
            android:key="darkMode"
            android:defaultValue="0"
            app:entries="@array/preferences_darkmode_entries"
            app:entriesImage="@array/preferences_darkmode_entries_image"
            app:entryValues="@array/preferences_darkmode_values"
            app:viewType="image" />
        <SwitchPreferenceCompat
            android:key="autoDarkMode"
            android:defaultValue="true"
            android:title="@string/system_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="languageCategory"
        android:title="@string/language"
        app:isPreferenceVisible="false">
        <PreferenceScreen
            android:key="language"
            android:title="@string/change_language" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="devOptions"
        android:title="@string/dev_options"
        app:isPreferenceVisible="false">
        <PreferenceScreen
            android:key="deleteAppData"
            android:title="@string/delete_appdata_and_exit" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/more_information">
        <PreferenceScreen
            android:key="tos"
            android:title="@string/tos" />
    </PreferenceCategory>

    <dev.oneuiproject.oneui.preference.InsetPreferenceCategory />

    <dev.oneuiproject.oneui.preference.TipsCardPreference
        android:key="tip"
        android:persistent="false"
        android:summary="@string/tips_card_summary"
        android:title="TipsCardPreference" />

    <dev.oneuiproject.oneui.preference.InsetPreferenceCategory />

    <dev.oneuiproject.oneui.preference.SuggestionCardPreference
        android:key="suggestion"
        android:persistent="false"
        android:summary="@string/suggestion_card_summary"
        android:title="@string/suggestion_pref_title"
        app:actionButtonText="@string/turn_on" />

    <dev.oneuiproject.oneui.preference.InsetPreferenceCategory android:key="suggestionInset" />

    <dev.oneuiproject.oneui.preference.SwitchBarPreference android:persistent="false" />

    <PreferenceCategory>
        <dev.oneuiproject.oneui.preference.UpdatableWidgetPreference
            android:key="updatable"
            android:persistent="false"
            android:title="@string/updatable_widget"
            android:widgetLayout="@layout/sample_pref_widget_check"
            app:summary="@string/click_me" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="switchDemo"
            android:title="SwitchPreference" />

        <SeslSwitchPreferenceScreen
            android:key="sampleSwitchBar"
            android:defaultValue="false"
            android:title="SwitchPreferenceScreen" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkbox"
            android:summary="@string/checkbox_pref_summary"
            android:title="CheckBoxPreference" />
    </PreferenceCategory>

    <PreferenceCategory>
        <EditTextPreference
            android:defaultValue="Default text"
            android:key="editText"
            android:title="EditTextPreference"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:defaultValue="#00FFFF"
            android:entries="@array/preferences_test_entries"
            android:entryValues="@array/preferences_test_values"
            android:key="dropdown"
            android:title="DropDownPreference"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="#F0FFFF"
            android:entries="@array/preferences_test_entries"
            android:entryValues="@array/preferences_test_values"
            android:key="list"
            android:title="ListPreference"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            android:defaultValue="@array/preferences_multiselect_list_default_values"
            android:entries="@array/preferences_test_entries"
            android:entryValues="@array/preferences_test_values"
            android:key="multiselectList"
            android:summary="@string/summary_placeholder"
            android:title="MultiSelectListPreference" />
    </PreferenceCategory>

    <PreferenceCategory>
        <dev.oneuiproject.oneui.preference.ColorPickerPreference
            android:defaultValue="#0381FE"
            android:key="colorPicker"
            android:summary="@string/summary_placeholder"
            android:title="ColorPickerPreference"
            app:showAlphaSlider="true" />

        <SeekBarPreference
            android:defaultValue="30"
            android:key="seekbar"
            android:max="50"
            android:summary="@string/summary_placeholder"
            android:title="SeekBarPreference"
            app:min="0" />

        <dev.oneuiproject.oneui.preference.SeekBarPreferencePro
            android:key="seekbarPro"
            android:defaultValue="0"
            android:max="100"
            android:summary="@string/seekbar_expanded"
            android:title="SeekBarPreference"
            app:adjustable="false"
            app:seekBarMode="expand"
            app:showSeekBarValue="false"
            app:showTickMark="false" />

        <dev.oneuiproject.oneui.preference.SeekBarPreferencePro
            android:key="seekbarProLevel"
            android:defaultValue="2"
            android:max="10"
            android:summary="LevelBar"
            android:title="SeekBarPreference"
            app:adjustable="true"
            app:centerBasedSeekBar="false"
            app:min="2"
            app:seamlessSeekBar="false"
            app:seekBarMode="level_bar"
            app:showTickMark="true" />

        <dev.oneuiproject.oneui.preference.SeekBarPreferencePro
            android:key="seekbarProCenterBased"
            android:defaultValue="0"
            android:summary="CenterBasedBar"
            android:title="SeekBarPreference"
            app:adjustable="false"
            app:centerBasedSeekBar="true"
            app:leftLabelName="@string/left_label"
            app:rightLabelName="@string/right_label"
            app:seamlessSeekBar="true"
            app:showSeekBarValue="false"
            app:showTickMark="false"
            app:updatesContinuously="true" />
    </PreferenceCategory>
</PreferenceScreen>
