<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2024-2026 Leonard Lemke

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/design_dest"
        android:icon="@drawable/ic_design_tab"
        android:title="@string/design" />

    <item
        android:id="@+id/picker_dest"
        android:icon="@drawable/ic_picker_tab"
        android:title="@string/picker" />

    <item
        android:id="@+id/icons_dest"
        android:icon="@drawable/ic_icons_tab"
        android:title="@string/icons" />

    <item
        android:id="@+id/seek_bar_dest"
        android:icon="@drawable/drawer_page_icon_seekbar"
        android:title="@string/seek_bar" />

    <item
        android:id="@+id/app_picker_dest"
        android:icon="@drawable/ic_oui_all_apps"
        android:title="@string/app_picker" />

</menu>
