<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pickers_bnv_date"
        android:icon="@drawable/ic_oui_calendar"
        android:title="@string/date"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <item
        android:id="@+id/pickers_bnv_time"
        android:icon="@drawable/ic_oui_time"
        android:title="@string/time"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/pickers_bnv_color"
        android:icon="@drawable/ic_oui_palette"
        android:title="@string/color"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

</menu>