<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2022-2026 Leonard Lemke

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/aboutBottomScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:roundedCorners="top_left|top_right">

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneui_project_team" />

        <dev.oneuiproject.oneui.widget.RoundedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/aboutBottomDevYann"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/about_page_avatar_yann"
                app:showTopDivider="false"
                app:title="Yanndroid" />

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/aboutBottomDevMesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/about_page_avatar_salvo"
                app:showTopDivider="true"
                app:title="Salvo Giangreco" />

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/aboutBottomDevTribalfs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/about_page_avatar_tribalfs"
                app:showTopDivider="true"
                app:title="Tribalfs" />

        </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

        <dev.oneuiproject.oneui.widget.RelativeLinksCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:title="@string/oui_des_relative_description">

            <TextView
                android:id="@+id/aboutBottomRelativeJetpack"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/android_jetpack" />

            <TextView
                android:id="@+id/aboutBottomRelativeMaterial"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/material_components" />

            <TextView
                android:id="@+id/aboutBottomRelativeSeslAndroidx"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/sesl_android_jetpack_unofficial" />

            <TextView
                android:id="@+id/aboutBottomRelativeSeslMaterial"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/sesl_material_components_for_android_unofficial" />

            <TextView
                android:id="@+id/aboutBottomRelativeDesign"
                style="@style/OneUI.RelativeLinkTextViewStyle"
                android:text="@string/oneui_design_lib" />

        </dev.oneuiproject.oneui.widget.RelativeLinksCard>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
